Fix REACT_APP_API_URL to point to correct backend URL

--- a/Frontend/render.yaml
+++ b/Frontend/render.yaml
@@ -6,4 +6,4 @@ services:
     staticPublishPath: ./build
     envVars:
       - key: REACT_APP_API_URL
-        sync: false 
+        value: https://admin-privada.onrender.com 
