--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -21,7 +21,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.5",
     "react-hot-toast": "^2.4.0",
-    "react-query": "^3.39.3",
+    "@tanstack/react-query": "^4.29.0",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
     "react-select": "^5.7.0",
