Update build command to use npm ci for more reliable builds

--- a/Frontend/render.yaml
+++ b/Frontend/render.yaml
@@ -2,7 +2,7 @@ services:
   - type: web
     name: admin-privada-frontend
     env: static
-    buildCommand: npm install && npm run build
+    buildCommand: npm ci && npm run build
     staticPublishPath: ./build
     envVars:
       - key: REACT_APP_API_URL
