--- a/Backend/config.env
+++ b/Backend/config.env
@@ -1,4 +1,4 @@
 PORT=5000
-MONGODB_URI=mongodb+srv://iscjcrios:S0p0rtetecnic0@adminprivada.a2p7okx.mongodb.net/fraccionamiento?retryWrites=true&w=majority&appName=AdminPrivada
+MONGODB_URI=mongodb+srv://iscjcrios:S0p0rtetecnic0@adminprivada.a2p7okx.mongodb.net/admin-privada?retryWrites=true&w=majority&appName=AdminPrivada
 JWT_SECRET=mi_secreto_super_seguro_para_jwt_2024
 NODE_ENV=development 
